# custom_error

./: Cargo.toml  rustfmt.toml
src/: error.rs  main.rs
src/fs/: error.rs  mod.rs
